appease warnings; ensure tests run